# kodaukovui

./: .env.example  .gitignore  CHANGELOG.md  README.md  ai_runtime.py  app_paths.py  brain.md  build_linux.sh  build_windows.bat  kodaukovui.spec  main.py  platform_adapter.py  readme.md  requirements.txt  roi_capture.py  run.sh  run_windows.bat  settings_store.py  smart_actions.example.json  test_platform_adapter.py  test_roi_capture.py  test_settings_store.py  test_tkweb.py  webview_host.py  windows_build.md
webui/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
webui/src/: App.tsx  desktop-api.ts  i18n.ts  types.ts
webui/src-tauri/: Cargo.toml  tauri.conf.json
webui/src-tauri/icons/: icon.icns
webui/src-tauri/src/: ai.rs  commands.rs  launcher.rs  lib.rs  main.rs  native.rs  prompts.rs  runtime.rs  settings.rs  windowing.rs
webui/src/components/: BuiltinHotkeyEditor.tsx  InputField.tsx  LanguagePills.tsx  SectionCard.tsx  SmartActionDialog.tsx  ToggleField.tsx
webui/src/pages/: Ask.tsx  Chat.tsx  ImageSource.tsx  Popup.tsx  Settings.tsx
webui/src/test/: Ask.test.tsx  Chat.test.tsx  Popup.test.tsx  Settings.test.tsx  setup.ts  utils.test.ts
