[package]
name = "kodaukovui"
version = "0.1.0"
description = "KoDauKoVui desktop shell"
authors = ["KoDauKoVui"]
edition = "2021"

[lib]
name = "kodaukovui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kodaukovui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
